整合了jqm以前学习代码